<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>
    <string name="upcoming_elections">Upcoming Elections</string>
    <string name="find_my_representatives">Find My Representatives</string>
    <string name="follow_election">Follow Election</string>
    <string name="unfollow_election">Unfollow Election</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="state_correspondence">State Correspondence</string>
    <string name="saved_elections">Saved Elections</string>
    <string name="twitter_link">twitter link</string>
    <string name="facebook_link">facebook link</string>
    <string name="website_link">website link</string>
    <string name="use_my_location">Use my Location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="representative_search">Representative Search</string>
    <string name="error_no_location_permission">Please grant the location permission</string>
    <string name="settings">Settings</string>
    <string name="error_null_location">Cannot determine your location. Try again later?</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="error_load_voterinfo">Cannot retrieve the required information.</string>
    <string name="election_information">Election Information</string>
    <string name="error">Error</string>

    <!-- COMPLETED: Add necessary string values -->

</resources>
