<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.politicalpreparedness.ui.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/data_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/double_padding"
        tools:visibility="gone">

        <!-- COMPLETED: Add title to toolbar -->
        <TextView
            android:id="@+id/election_name"
            style="@style/election_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Election name" />

        <!-- COMPLETED: Add visual styling -->
        <TextView
            android:id="@+id/election_date"
            style="@style/election_date_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2021" />

        <!-- COMPLETED: Add visual styling and content -->
        <LinearLayout
            android:id="@+id/election_information_box"
            style="@style/election_information_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_date">

            <TextView
                android:id="@+id/state_header"
                style="@style/election_information"
                android:text="@string/election_information" />

            <!-- COMPLETED: Add click binding to open web URL -->
            <!-- COMPLETED: Add visual styling and content -->
            <TextView
                android:id="@+id/state_locations"
                style="@style/election_button"
                android:text="@string/voting_locations" />

            <!-- COMPLETED: Add click binding to open web URL -->
            <!-- COMPLETED: Add visual styling and content -->
            <TextView
                android:id="@+id/state_ballot"
                style="@style/election_button"
                android:text="@string/ballot_information" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="divider,state_correspondence_header,address"
            tools:visibility="visible" />

        <!-- COMPLETED: Add visual styling and content -->
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/double_padding"
            android:layout_marginBottom="@dimen/double_padding"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_information_box" />

        <TextView
            android:id="@+id/state_correspondence_header"
            style="@style/state_correspondence"
            android:text="@string/state_correspondence"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <!-- COMPLETED: Add data binding -->
        <TextView
            android:id="@+id/address"
            style="@style/state_correspondence_address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            tools:text="Address" />

        <!-- COMPLETED: Add button to save election to Room -->
        <Button
            android:id="@+id/button_save"
            style="@style/election_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/follow_election" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/loading_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_loadingmask"
        tools:visibility="gone">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading_progress"
            style="@style/Widget.Material3.CircularProgressIndicator.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/error_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <ImageView
            style="@style/errorscreen_icon"
            android:contentDescription="@string/error"
            android:src="@drawable/ic_baseline_error_outline_24"
            app:tint="@color/md_theme_error" />

        <TextView
            android:id="@+id/error_textview"
            style="@style/errorscreen_text"
            android:text="@string/error_load_voterinfo" />

    </LinearLayout>
</FrameLayout>
